# cpp-pybind-skel

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  dev-requirements.txt  setup.py
.github/workflows/: tests.yml  wheels.yml
bench/: CMakeLists.txt  bench-lib.cpp  run-bench.cpp
cmake/: Extras.cmake
docs/: Doxyfile  builddocs.html  builddocs.rst  conf.py  genindex.html  index.html  index.rst  introduction.html  introduction.rst  make_docs.py  objects.inv  search.html  searchindex.js
docs/cpp_api/: class_view_hierarchy.html  cpp_library_root.html  dir_include.html  dir_include_CPPLib.html  file_include_CPPLib_CPPLib.hpp.html  file_view_hierarchy.html  function__c_p_p_lib_8hpp_1a1fbc71ae04d2ad2b2ad522f9ee04506a.html  function__c_p_p_lib_8hpp_1ab76f397c44f3d2296f60957e1d1bddbc.html  function__c_p_p_lib_8hpp_1af61001e9d3132d916073b522dd668b1f.html  namespace_CPPLib.html  program_listing_file_include_CPPLib_CPPLib.hpp.html  unabridged_api.html  unabridged_orphan.html
docs/python_api/: cpplib.VectorDouble.html  cpplib.VectorInt.html  cpplib.VectorULongInt.html  cpplib.get_cpplib_version.html  cpplib.hello.html  cpplib.helper.html  cpplib.helper.pure_python_hello.html  cpplib.html  cpplib.multiply_by_scalar_double.html  cpplib.multiply_by_scalar_int.html  cpplib.multiply_by_scalar_size_t.html
docs/tutorial/C++/: basic.html  index.html
docs/tutorial/Python/: basicdemo.html  basicdemo.ipynb  index.html
examples/cpp/: CMakeLists.txt  example1.cpp
examples/python/: example1.py
include/CPPLib/: CPPLib.hpp
scripts/: liftoff.sh  make_release.sh  manage_versions.py  rename_project.py
src/: CMakeLists.txt  version.txt
src/CPPLib/: CMakeLists.txt  CPPLConfig.cpp  CPPLConfig.hpp.in  CPPLib.cpp
src/Python/: CMakeLists.txt  MANIFEST.in  README.md  make_python_package.cmake  setup.py
src/Python/cpplib/: __init__.py  helper.py
src/Python/cpplib_pybind/: cpplib_pybind.cpp  cpplib_pybind.hpp
src/Python/cpplib_pybind/docstring/: docstring.cpp  docstring.hpp
src_docs/: builddocs.rst  conf.py  index.rst  introduction.rst  make_docs.py
tests/: CMakeLists.txt  test-cpplib.cpp
tests/cpp/: CMakeLists.txt
tests/python/: basic_test.py
